Terrassa back in yellow

--- a/config.toml
+++ b/config.toml
@@ -26,7 +26,10 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 [params.hero]
     textColor = "" # Empty for default color
 
-
+[params.cta] # Call To Action 
+    show = true
+    cta = "Contact"
+    link = "contact" # Relative URL
   
 [params.separator] # Separators between sections on the home page
     show = false
