Terrassa with base url changed in config

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://TanushreeNori.com/"
+baseurl = "https://tanushreenori.me/"
 enableEmoji = true
 title = "Tanushree Nori's Blog"
 theme = "hugo-terrassa-theme"
